# mochi

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
api/: Cargo.toml
api/src/: error.rs  lib.rs  logs.rs  model_old.rs  mw_auth.rs  routes.rs
api/src/routes/: bot.rs  hello.rs  login.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20231207220711_country.down.sql  20231207220711_country.up.sql  20231227200133_currency.up.sql  20240104180014_timezone.down.sql  20240104180014_timezone.up.sql  20240104180016_exchange.down.sql  20240104180016_exchange.up.sql  20240118005549_stock.down.sql  20240118005549_stock.up.sql  20240118005550_stock_td_plan.down.sql  20240118005550_stock_td_plan.up.sql  20240124233141_stock_exchange.down.sql  20240124233141_stock_exchange.up.sql  20240124233142_stock_price.down.sql  20240124233142_stock_price.up.sql
model/: Cargo.toml
model/src/: country.rs  currency.rs  db.rs  error.rs  exchange.rs  id.rs  lib.rs  mod.rs  prelude.rs  region.rs  sea_orm_active_enums.rs  stock.rs  stock_exchange.rs  stock_price.rs  stock_td_plan.rs  timezone.rs  user.rs
model/src/controller/: country.rs  currency.rs  exchange.rs  mod.rs  region.rs  stock.rs  stock_exchange.rs
seed/: .~lock.region.csv#  country.csv  country_mapping.csv  currency.csv  region.csv  timezone.csv
src/: README.md  db.rs  go.mod  go.sum  logs.rs  main.go  main.rs  model.rs  static.rs  stock.rs  td_api.rs  twelvedata.rs  update_countries.rs  update_currencies.rs  update_exchanges.rs  update_regions.rs  update_stock_exchanges.rs  update_stock_prices.rs  update_stock_td_plans.rs  update_stocks.rs  update_timezones.rs
src/cmd/load_previous_day_stock_prices/: main.go
src/cmd/load_stock_prices_since_inception/: main.go
src/cmd/load_stocks/: main.go
src/cmd/migrate/: main.go
src/controllers/: ping.go  stock.go
src/core/: database.go  env.go  stock_model.go  stock_price_model.go
src/libs/iex/: env.go  stock.go  stock_price.go
src/routers/: ping.go  routes.go  stock.go
src/seed/: currency.csv
src/twelvedata/: api.rs  endpoint.rs
src/twelvedata/endpoint/: earliest_timestamp.rs  exchanges.rs  stocks.rs  time_series.rs
src/web/: mod.rs  mw_auth.rs
src/web/routes/: bot.rs  login.rs
tests/: quick_dev.rs
