[package]
name = "mochi-db-update"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "migration", "model" ]

[dependencies]
csv = "^1.3.0"
dotenvy = "^0.15.7"
model = { path = "model" }
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0.192", features = ["derive"] }
tokio = { version = "^1.34.0", features = ["full"] }
