[package]
name = "mochi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "model" ]

[[bin]]
name = "update_regions"
path = "src/update_regions.rs"

[[bin]]
name = "update_countries"
path = "src/update_countries.rs"

[[bin]]
name = "update_currencies"
path = "src/update_currencies.rs"

[[bin]]
name = "update_timezones"
path = "src/update_timezones.rs"

[dependencies]
csv = "^1.3"
model = { path = "model" }
polars = "^0.35"
serde = "^1"
sqlx = { version = "^0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "^1.34", features = [ "full" ] }
