[package]
name = "mochi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "model" ]

[[bin]]
name = "update_regions"
path = "src/update_regions.rs"

[[bin]]
name = "update_countries"
path = "src/update_countries.rs"

[[bin]]
name = "update_currencies"
path = "src/update_currencies.rs"

[[bin]]
name = "update_timezones"
path = "src/update_timezones.rs"

[[bin]]
name = "update_exchanges"
path = "src/update_exchanges.rs"

[[bin]]
name = "update_stocks"
path = "src/update_stocks.rs"

[[bin]]
name = "update_stock_td_plans"
path = "src/update_stock_td_plans.rs"

[[bin]]
name = "update_stock_prices"
path = "src/update_stock_prices.rs"

[dependencies]
chrono = { version = "^0.4.33", features = [ "serde" ] }
csv = "^1.3"
model = { path = "model" }
reqwest = { version = "^0.11.23", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "^0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
thiserror = "^1.0"
tokio = { version = "^1.34", features = [ "full" ] }
