[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = { version = "0.6", features = ["macros"]}
trait_enum = "0.5"
lazy-regex = "2"
model = { path = "../model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
strum_macros = "0.24"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9"
uuid = { version = "1", features = ["v4", "fast-rng"] }

