[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["macros"]}
random-string = "1"
serde = { version = "1", features = ["derive"] }
strum_macros = "0.24"
