[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "model"
path = "src/mod.rs"

[dependencies]
sea-orm = { version = "^0.12.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "^1.0.190", features = ["derive"] }
