[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.33", features = [ "serde" ] }
serde = "^1"
sqlx = { version = "^0.7", features = [ "postgres", "chrono" ] }
strum_macros = "^0.25"
